Coverity analysis defect 147380: Uninitialized pointer field

XMLWordPrintableJSON

    • Query Integration
    • Fully Compatible
    • ALL
    • v8.0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized pointer field

      The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
      /src/mongo/db/query/plan_yield_policy_remote_cursor.h:68: UNINIT_CTOR 147380 Class member declaration for "_exec".
      /src/mongo/db/query/plan_yield_policy_remote_cursor.cpp:72: UNINIT_CTOR 147380 Non-static class member "_exec" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Will Buerger
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: