SERVER-89746: Initialize PlanYieldPolicyRemoteCursor _exec on construction (#21551)

GitOrigin-RevId: 6dec42c4d9857a2412197a01a5bd4cc43a8d37bc